# pyblock3-preview

./: .gitignore  CMakeLists.txt  README.md  setup.py
.github/actions/build-wheel/: Dockerfile.manylinux2010  entrypoint.sh
.github/workflows/: build.yml  general.yml
data/: H2O.STO3G.FCIDUMP  H2O.STO3G.GSOC  H2O.STO3G.MOCOEFF  HUBBARD-L4.FCIDUMP  N2.CCPVDZ.FCIDUMP
docs/: pyblock3.ipynb  requirements.txt
docs/source/: conf.py  index.rst
docs/source/API/: algebra.rst  algorithms.rst  hamiltonian.rst  main.rst
docs/source/Documentation/: 1pdm.rst  ancilla.rst  det.rst  green.rst  main.rst  mpo.rst  mps.rst  rttddmrg.rst  sparse.rst  symmetry.rst
pyblock3/: __init__.py  expr.py  fcidump.py  hamiltonian.py  heisenberg.py  moving_environment.py  mps.py  symbolic.py  symbolic_mpo.py  symmetry.py  tensor.py
pyblock3/algebra/: __init__.py  core.py  dmrg.py  einsum.py  fermion.py  fermion_encoding.py  fermion_functor.py  fermion_large.py  fermion_operators.py  fermion_ops.py  fermion_setting.py  fermion_split.py  fermion_symmetry.py  flat.py  flat_functor.py  funcs.py  integrate.py  linalg.py  mpe.py  mps.py  symmetry.py
pyblock3/algebra/ad/: __init__.py  core.py  fermion.py  fermion_ops.py  flat.py  flat_impl.py  mps.py
pyblock3/algebra/debug_suite/: debug_fermion_tensordot.py  debug_flip.py  debug_transpose.py  slow_flat_tensordot.py
pyblock3/algebra/impl/: flat.py
pyblock3/algebra/test/: test_fermion.py  test_fermion_operators.py  test_fermion_svd.py
pyblock3/algebra/tests/: test_boson_cpp.py  test_boson_python.py  test_fermion.py  test_fermion_cpp.py  test_fermion_large.py  test_fermion_ops.py  test_fermion_python.py  test_operators.py  test_symmetry.py
pyblock3/algorithms/: core.py  dmrg.py  green.py  linear.py  tddmrg.py
pyblock3/algorithms/tests/: test_dmrg.py  test_ghf.py  test_sa.py  test_soc.py
pyblock3/aux/: hamil.py  io.py
pyblock3/block2/: hamil.py  io.py
pyblock3/gaussian/: core.py
pyblock3/symbolic/: expr.py  symbolic.py  symbolic_mpo.py
src/: bond_info.cpp  bond_info.hpp  bond_info_tmpl.hpp  core.cpp  fermion_sparse.cpp  fermion_sparse.hpp  fermion_symmetry.hpp  flat_fermion.cpp  flat_fermion.hpp  flat_fermion_tmpl.hpp  flat_functor.cpp  flat_functor.hpp  flat_functor_tmpl.hpp  flat_sparse.cpp  flat_sparse.hpp  flat_sparse_tmpl.hpp  hamiltonian.cpp  hamiltonian.hpp  hamiltonian_ptree.cpp  hamiltonian_ptree.hpp  main.cpp  max_flow.hpp  qc_expr.hpp  qc_hamiltonian.cpp  qc_hamiltonian.hpp  qc_mpo.hpp  qc_symbolic.hpp  symmetry_tmpl.hpp  sz.hpp  tensor.cpp  tensor.hpp  tensor_einsum.cpp  tensor_einsum.hpp  tensor_impl.cpp  tensor_impl.hpp
src/gpu/: flat_fermion.cu  flat_fermion.hpp  flat_fermion_tmpl.hpp
tests/: algebra.py  ancilla.py  ancilla2.py  ancilla3.py  auto.py  auto2.py  auto3.py  auto4.py  dmrg.py  dmrg2.py  dmrg3.py  dmrg4.py  dmrg5.py  exact_diagonalization.py  expect.py  fusing.py  ghf-sa-soc-cu.py  ghf-sa-soc-water.py  ghf-sa-water.py  ghf.py  green.py  heisenberg.py  heisenberg_mera.py  heisenberg_mera_torch.py  kdmrg.py  mps-ad.py  onepdm.py  orb_rotation.py  sliceable.py  symbolic.py  symbolic_dmrg.py  tddmrg.py  transformation.py
tests/tensor_network/00-peps/: 00-hubbard-4x4-D4.out  00-hubbard-4x4.py  01-hubbard-4x4-fused-D4.out  01-hubbard-4x4-fused.py
tests/tensor_network/01-mera-1d/: 00-heisenberg.out  00-heisenberg.py  01-hubbard-sparse.out  01-hubbard-sparse.py  02-hubbard-fermi-fused.out  02-hubbard-fermi-fused.py  02-hubbard-fermi.out  02-hubbard-fermi.py
tests/tensor_network/02-mera-2d/: 00-heisenberg-4x4-D12.out  00-heisenberg-4x4.py  01-hubbard-2x2-D8.out  01-hubbard-4x4-D5.out  01-hubbard-U11-fused.py  02-hubbard-2x2-D8.out  02-hubbard-4x4-D5.out  02-hubbard-Z22-fused.py
tests/tensor_network/03-gaussian/: 00-mps-b4-ghf.py  00-mps-b4-rhf.py  00-mps-b4-uhf.py  00-mps-b4.py  01-mps-b6-ghf.py  01-mps-b6-rhf.py  01-mps-b6-uhf.py  01-mps-b6.py  02-mera-1d-b4-ghf.py  02-mera-1d-b4-rhf.py  02-mera-1d-b4-uhf.py  02-mera-1d-b4.py  03-mera-1d-b6-ghf.py  03-mera-1d-b6-rhf.py  03-mera-1d-b6-uhf.py  03-mera-1d-b6.py  04-mera-1d-b2-ghf.py  04-mera-1d-b2-rhf.py  04-mera-1d-b2-uhf.py  04-mera-1d-b2.py  05-mera-2d-4x4-ghf.py  05-mera-2d-4x4-rhf.py  05-mera-2d-4x4-spins.py  05-mera-2d-4x4-uhf.py  05-mera-2d-4x4.py  06-mera-2d-4x4-spins.py  07-16x16-8x8-cd4.py  08-16x16-4x4-fit-cd2.py  09-16x16-fit-gates.py
tests/tensor_network/legacy/: heisenberg_mera.py  heisenberg_mera_contract.py
